alignment fixes

--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -154,7 +154,7 @@ label {
   padding: 14px;
   text-align: center;
   bottom: 2%;
-  left: 50%;
+  left: 93%;
   margin-left: -25px;
   top: inherit;
   font-size: 2.5em;
